# retirement

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
book/: searchindex.js
cvx/retirement/: backtest.py  black_scholes.py  brokerage.py  data_loader.py  retirement_problem.py  simulation.py  utils.py  visualize.py
data/: datalife_expectancy_data.csv  female_life_expectancy_data.csv  inflation.csv  inflation.xlsx  market_data.csv  sp500.csv
experiments/: collar_plots.ipynb  data.py  retirement.ipynb  simulate_collar.ipynb  timing.ipynb  utils.py  visualize.ipynb
experiments/cache/: MPC_lower_bequests.csv  MPC_lower_bequests_collar.csv  MPC_lower_cash.csv  MPC_lower_cash_collar.csv  MPC_upper_bequests.csv  MPC_upper_bequests_collar.csv  MPC_upper_cash.csv  MPC_upper_cash_collar.csv  MPC_upper_collar_bequests.csv  results_MPC_ret_adj_B.csv  results_MPC_ret_adj_B_collar.csv  results_MPC_ret_adj_I.csv  results_MPC_ret_adj_I_collar.csv  results_MPC_ret_adj_R.csv  results_MPC_ret_adj_R_collar.csv  ret_adj_B.csv  ret_adj_B_collar.csv  ret_adj_R.csv  ret_adj_R_collar.csv
tests_coverage/coverage/: coverage.json  coverage.xml
tests_coverage/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_d920c7a759f9cb98___init___py.html  z_d920c7a759f9cb98_grid_py.html  z_d920c7a759f9cb98_interpolation_py.html  z_d920c7a759f9cb98_metric_py.html  z_d920c7a759f9cb98_month_py.html  z_d920c7a759f9cb98_rescale_py.html  z_f2b2744377fc7fb9___init___py.html  z_f2b2744377fc7fb9_builder_py.html  z_f2b2744377fc7fb9_portfolio_py.html  (+1 more)
(+5 files in other folders)
