[tool.poetry]
name = "retirement"
version = "0.0.0"
description = "Simple simulator for investors"
authors = ["Thomas Schmelzer"]
readme = "README.md"
repository = "https://github.com/cvxgrp/simulator"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "*"
pandas = ">=2.2.0"
cvxpy = ">=1.4.1"
matplotlib = "*"
seaborn = "^0.13.2"
yfinance = "^0.2.51"
openpyxl = "^3.1.5"
scikit-learn = "^1.5.2"
tqdm = "^4.66.5"
mosek = "^10.2.5"
arch = "^7.1.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"
pre-commit = "3.8.0"

[tool.poetry.group.dev.dependencies]
loguru = "*"
cvxpy-base = "1.5.3"
clarabel = "0.9.0"
tinycta = "0.7.1"
ipykernel = "6.29.5"

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py",
]
